# tapview

./: Cargo.toml  README.md  flake.nix
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: app.rs  dimensions.rs  lib.rs  libinput_backend.rs  libinput_state.rs  main.rs  multitouch.rs  recording.rs  render.rs  windows_input_backend.rs
src/config/: linux.rs  mod.rs  windows.rs
src/discovery/: mod.rs  udev_discovery.rs  windows_discovery.rs
src/heatmap/: backend.rs  chips.rs  discovery.rs  hidraw.rs  mod.rs  protocol.rs  windows_hid.rs
src/input/: evdev_backend.rs  mod.rs  windows_backend.rs
testdata/: sample.tapv
